Ajustes estrutura SERPRO
